pthread instead fork

--- a/.bazelrc
+++ b/.bazelrc
@@ -2,6 +2,7 @@ build --copt=-w
 build --copt=-mfma
 build --cxxopt=-std=c++14
 build --copt=-march=native
-build --copt=-O3
+build --copt=-O0
+build -c dbg
 build --copt=-fpic
 build --cxxopt=-DTIXML_USE_STL
