--- a/src/common/BUILD
+++ b/src/common/BUILD
@@ -1,9 +1,10 @@
 cc_library(
   name = "io-common",
-  srcs = ['socket/socket.cc'],
+  srcs = [],
   hdrs = glob([
     "err.h",
     "socket/socket.h",
+    "poll/poller.h",
   ]),
   linkopts = ['-pthread'],
   visibility = ["//visibility:public"],
